--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "firebase-admin": "^8.11.0",
     "mysql": "^2.16.0",
     "validator": "^12.1.0"
   },
