--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "firebase-admin": "^8.11.0",
+    "multer": "^1.4.2",
     "mysql": "^2.16.0",
     "validator": "^12.1.0"
   },
