--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "trabajo-api",
+  "name": "tesis-ws",
   "version": "1.0.0",
-  "description": "",
+  "description": "Web Service de tesis",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
